support colors and emojis for tags (#16)
